align reponsive menu toggle to the right and fix the bug of close toggle menu on clicking setting and developer for its sub-menu

--- a/app/assets/stylesheets/layout/_sidebar.scss
+++ b/app/assets/stylesheets/layout/_sidebar.scss
@@ -129,7 +129,7 @@
 }
 
 .cameralist-height {
-  max-height: 30vh;
+  max-height: 41vh;
   overflow: auto;
   overflow-y: hidden;
   margin-right: 2px !important;
